# stocks

./: .gitignore  CLAUDE.md  Makefile  README.md  acoes_em_comum.json  alphavantage.txt  carteira.json  carteira_clube.json  carteira_magic.json  fundamentus.json  ide.yml  justfile  magic.py  magicformula.json  magicformula.py  pyproject.toml  requirements.in  requirements.txt  stocks.py  stocks_info.json  stocks_profiling.txt  tests.py  todo.txt  update_cdv.py  update_fundamentus.py  update_stocks.py
.github/workflows/: pages.yml
.serena/: project.yml
cloud_functions/: requirements.txt  update_cdv.py  update_fundamentus.py  update_fundsexplorer.py  update_intersection.py  update_magicformula.py  update_stocks_info.py
data/raw/: fundamentus.json
data/strategies/: acquirers.json  altman.json  assetlight.json  bazin.json  bookvalue.json  buffett.json  cashrich.json  cdv.json  consensus.json  contrarian.json  deepvalue.json  dupont.json  earnings_accel.json  earnings_yield_spread.json  fortress.json  garp.json  graham.json  intersection.json  largecap_dividend.json  magicformula.json  margin_compression.json  momentum_value.json  multifactor.json  netnet.json  piotroski.json  quality.json  redflags.json  sector_relative.json  smallcap_value.json  volatility_adjusted.json  working_capital.json
docs/plans/: 2026-03-27-frontend-ux-improvements-design.md  2026-03-27-frontend-ux-improvements-plan.md  (+1 more)
frontend/: index.html  main.mjs  styles.css
stocks/: bundle.py  pipelines.py  settings.py
tests/: test_bundle_builder.py  test_strategy_output_schema.py
(+17 files in other folders)
