[project]
name = "stocks"
version = "0.1.0"
description = "Brazilian stock market analysis with Magic Formula and Clube do Valor screening"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "colorlog",
    "html5lib",
    "jsonschema",
    "lxml",
    "pandas",
    "polars",
    "rich",
    "scrapy",
    "spidermon",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "RUF012", # mutable class attrs — Scrapy convention for spider settings
]

[tool.ty.environment]
python-version = "3.12"
